K8S/redis-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
        - name: redis-cache
          image: redis
          ports:
            - containerPort: 6379
              name: redis-port
---
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: redis-cache
  ports:
  - name: redis-port
    protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: redis-cache
  ports:
  - name: redis-port
    protocol: TCP
    port: 6379
    targetPort: 6379
